CORE-2158: Add setup calendar page. r=jianmin

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <link rel="import" href="/elements/multi_day.html">
 <link rel="import" href="/elements/event_list.html">
 <link rel="import" href="/elements/event_detail.html">
+<link rel="import" href="/elements/setup_calendar.html">
 
 </head>
 
@@ -135,6 +136,8 @@
 <section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
 <section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region"></section>
 <section is="event-detail" class="fullscreen-view theme-calendar" id="event-detail-view" role="region"
+  nav-scope nav-loop nav-ignore tabIndex="0"></section>
+<section is="setup-calendar" class="fullscreen-view theme-calendar" id="setup-calendar-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section id="h5-option-menu-border">
   <h5-option-menu tabIndex="0"></h5-option-menu>
