CORE-2179: Implement Save and Cancel function of Modify-Event. r=jianmin-zhou

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -76,7 +76,7 @@
         <li class="pack-select sk-modify-event-repeat repeat-style" role="presentation" tabindex="0">
           <a class="menu-item" nav-scope nav-ignore>
             <small data-l10n-id="repeat">Repeat</small>
-            <select id="repeat-select" nav-scope nav-ignore>
+            <select id="repeat-select" name="repeat" nav-scope nav-ignore>
               <option data-l10n-id="never" value="never">Never</option>
               <option data-l10n-id="every-day" value="every-day">Every day</option>
               <option data-l10n-id="every-week" value="every-week">Every week</option>
