CORE-2243: change the path of event list page. r=jianmin

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <link rel="import" href="/elements/settings.html">
 <link rel="import" href="/elements/show_event.html">
 <link rel="import" href="/elements/multi_day.html">
-<link rel="import" href="/elements/event_list.html">
+<link rel="import" href="/elements/events_list.html">
 <link rel="import" href="/elements/event_detail.html">
 <link rel="import" href="/elements/setup_calendar.html">
 
