CORE-2248: Implement edit event function in option menu of event list page. r=jianmin

--- a/elements/events_list.html
+++ b/elements/events_list.html
@@ -5,9 +5,8 @@
     </h5-header>
 
     <section class="content" id="events-list-agenda">
-      <section id="events-list" class="day-events" role="listbox" aria-labelledby="events-list-header-date">
-        
-      </section>
+      <ul id="events-list" class="day-events" role="listbox" aria-labelledby="events-list-header-date">
+      </ul>
     </section>
 
   </template>
