CORE-2135: implement goToDate function of option-menu in month view. r=jianmin-zhou

--- a/index.html
+++ b/index.html
@@ -142,6 +142,6 @@
 <section id="h5-option-menu-border">
   <h5-option-menu tabIndex="0"></h5-option-menu>
 </section>
-
+<input id="date-picker" class="hidden-input" aria-hidden="true" type="date">
 </body>
 </html>
