CORE-2210: The Settings UI is not displayed as UX spec defines. r=jianmin

--- a/elements/advanced_settings.html
+++ b/elements/advanced_settings.html
@@ -28,7 +28,7 @@
       <ul class="settings-list link-list" role="presentation">
         <li class="pack-select sk-advs-sync-frequency" role="presentation" tabindex="0">
           <a class="menu-item" nav-scope nav-ignore>
-            <small data-l10n-id="sync-frequency">Sync Calendar</small>
+            <small data-l10n-id="sync-frequency">Sync Calendars</small>
             <select id="setting-sync-frequency" name="syncFrequency" nav-scope nav-ignore>
               <option data-l10n-id="sync-frequency-15min" value="15">Every 15 minutes</option>
               <option data-l10n-id="sync-frequency-30min" value="30">Every 30 minutes<</option>
@@ -55,7 +55,7 @@
       <ul class="settings-list link-list" role="presentation">
         <li class = "pack-select sk-advs-allday-alarm" role="presentation" tabIndex="0">
           <a class="menu-item" nav-scope nav-ignore>
-            <small data-l10n-id="allday-events">All-day event alert</small>
+            <small data-l10n-id="allday-events">All-day Events Alert</small>
             <label id="default-allday-alarm" nav-scope nav-ignore>
               <span class="button" nav-scope nav-ignore></span>
             </label>
@@ -63,7 +63,7 @@
         </li>
         <li class = "pack-select sk-advs-event-alarm" role="presentation" tabIndex="0">
           <a class="menu-item" nav-scope nav-ignore>
-            <small data-l10n-id="events">Events alert<</small>
+            <small data-l10n-id="events-alert">Events Alert<</small>
             <label id="default-event-alarm" nav-scope nav-ignore>
               <span class="button" nav-scope nav-ignore></span>
             </label>
