CORE-2306: Implement delete function in event list page. r=jianmin

--- a/elements/events_list.html
+++ b/elements/events_list.html
@@ -1,7 +1,7 @@
 <element name="events-list" extends="section">
   <template>
     <h5-header id="events-list-header">
-      <h1 id="events-list-header-date" data-l10n-id="events-list-header">Event List</h1>
+      <h1 id="events-list-header-date" data-l10n-id="events-list-header" tabindex="0">Event List</h1>
     </h5-header>
 
     <section class="content" id="events-list-agenda">
@@ -9,5 +9,7 @@
       </ul>
     </section>
 
+    <h5-option-menu id="events-list-option-menu"></h5-option-menu>
+    <h5-dialog id="events-list-dialog"></h5-dialog>
   </template>
 </element>
