--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -1,10 +1,57 @@
 <element name="event-detail" extends="section">
   <template>
     <h5-header id="event-detail-header">
-      <h1 data-l10n-id="event-detail-header">Event Detail</h1>
+      <h1 id="event-detail-title" data-l10n-id="event-detail-header">Event Detail</h1>
     </h5-header>
 
     <section class="content">
+      <ul>
+        <li class="location">
+          <div>
+            <label class="event-detail-label" data-icon="location" aria-hidden="true"></label>
+            <div class="event-detail-location-div">
+              <span id="event-detail-location" class="p-pri content">
+              </span>
+            </div>
+          </div>
+        </li>
+        <li class="duration-time">
+          <div>
+            <label class="event-detail-label" data-icon="time" aria-hidden="true"></label>
+            <div id="event-detail-duration-time" class="event-detail-time-div p-sec">
+            </div>
+          </div>
+        </li>
+        <li class="current-calendar">
+          <div>
+            <div class="indicator"></div>
+            <div class="event-detail-current-calendar-div">
+              <div class="event-detail-current-calendar-div-top">
+                <span class="p-sec" data-l10n-id="calendar">Calendar</span>
+              </div>
+              <div class="event-detail-current-calendar-div-bot">
+                <span class="p-pri" id="event-detail-current-calendar"></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="alarms">
+          <div class="event-detail-alarms-div-top">
+            <span class="p-sec" data-l10n-id="alert">Alert</span>
+          </div>
+          <div class="event-detail-alarms-div-bot">
+            <span class="p-pri content" id="event-detail-alarms" data-l10n-id="none">None</span>
+          </div>
+        </li>
+        <li class="description">
+          <div class="event-detail-description-div-top">
+            <span class="p-sec" data-l10n-id="description">Description</span>
+          </div>
+          <div class="event-detail-description-div-bot">
+            <span class="p-pri content" id="event-detail-description"></span>
+          </div>
+        </li>
+      </ul>
     </section>
 
   </template>
