CORE-2222: Add navigation in event detail page. r=jianmin

--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -6,7 +6,7 @@
 
     <section class="content">
       <ul>
-        <li class="location">
+        <li class="location" tabindex="0">
           <div>
             <label class="event-detail-label" data-icon="location" aria-hidden="true"></label>
             <div class="event-detail-location-div">
@@ -15,14 +15,14 @@
             </div>
           </div>
         </li>
-        <li class="duration-time">
+        <li class="duration-time" tabindex="0">
           <div>
             <label class="event-detail-label" data-icon="time" aria-hidden="true"></label>
             <div id="event-detail-duration-time" class="event-detail-time-div p-sec">
             </div>
           </div>
         </li>
-        <li class="current-calendar">
+        <li class="current-calendar" tabindex="0">
           <div>
             <div class="indicator"></div>
             <div class="event-detail-current-calendar-div">
@@ -35,7 +35,7 @@
             </div>
           </div>
         </li>
-        <li class="alarms">
+        <li class="alarms" tabindex="0">
           <div class="event-detail-alarms-div-top">
             <span class="p-sec" data-l10n-id="alert">Alert</span>
           </div>
@@ -43,7 +43,7 @@
             <span class="p-pri content" id="event-detail-alarms" data-l10n-id="none">None</span>
           </div>
         </li>
-        <li class="description">
+        <li class="description" tabindex="0">
           <div class="event-detail-description-div-top">
             <span class="p-sec" data-l10n-id="description">Description</span>
           </div>
