--- a/elements/events_list.html
+++ b/elements/events_list.html
@@ -4,7 +4,7 @@
       <h1 id="events-list-header-date" data-l10n-id="events-list-header" tabindex="0">Event List</h1>
     </h5-header>
 
-    <section class="content" id="events-list-agenda">
+    <section class="content" id="events-list-agenda" nav-scope nav-loop nav-ignore>
       <ul id="events-list" class="day-events" role="listbox" aria-labelledby="events-list-header-date">
       </ul>
     </section>
