CORE-2379: Now event-list can display correctly. r=jianmin

--- a/elements/events_list.html
+++ b/elements/events_list.html
@@ -4,10 +4,10 @@
       <h1 id="events-list-header-date" data-l10n-id="events-list-header" tabindex="0">Event List</h1>
     </h5-header>
 
-    <section class="content" id="events-list-agenda" nav-scope nav-loop nav-ignore>
+    <div class="content" id="events-list-agenda" nav-scope nav-loop nav-ignore>
       <ul id="events-list" class="day-events" role="listbox" aria-labelledby="events-list-header-date">
       </ul>
-    </section>
+    </div>
 
     <h5-option-menu id="events-list-option-menu"></h5-option-menu>
     <h5-dialog id="events-list-dialog"></h5-dialog>
