CORE-2162:Support add online account.r?jianmin-zhou,Manson

--- a/elements/advanced_settings.html
+++ b/elements/advanced_settings.html
@@ -9,14 +9,10 @@
 
       <h5-separator id="account-list-header" data-l10n-id="account-list-header"></h5-separator>
 
-      <ul class="account-list link-list" aria-labelledby="account-list-header" role="listbox">
-      </ul>
-
       <ul role="presentation">
-        <li class="pack-select create-account-item sk-advs-setup-calendar" role="presentation" tabindex="0">
+        <li class="pack-select sk-advs-setup-calendar" role="presentation" tabindex="0">
           <a class="menu-item" nav-scope nav-ignore>
-            <span class="setup-calendar" href="/select-preset/"
-                    data-l10n-id="advanced-settings-setup-calendars">
+            <span class="setup-calendar" data-l10n-id="advanced-settings-setup-calendars">
               Setup calendars
             </span>
           </a>
