--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -4,6 +4,21 @@
       <h1 data-l10n-id="setup-calendar-header">Setup Calendar</h1>
     </h5-header>
 
+    <h5-separator data-l10n-id="calendar-online"></h5-separator>
+
+    <ul class="account-list link-list" aria-labelledby="account-list-header" role="listbox">
+    </ul>
+
+    <ul role="presentation">
+      <li class="pack-select create-account-item sk-add-account" role="presentation" tabindex="0">
+        <span class="add-account" data-l10n-id="setup-add-account">
+          Add Account
+        </span>
+      </li>
+    </ul>
+
+    <h5-option-menu id="add-account-option-menu"></h5-option-menu>
+
     <section class="content">
     </section>
 
