--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <script defer src="shared/h5-checkbox/h5-checkbox.js"></script>
 <script defer src="shared/h5-input-wrapper/h5-input-wrapper.js"></script>
 <script defer src="shared/h5-two-line-li/h5-two-line-li.js"></script>
+<script defer src="shared/h5-list-button/h5-list-button.js"></script>
 <!-- Icons are lazy loaded by gaia-header -->
 <!-- <link rel="stylesheet" type="text/css" href="shared/gaia-icons/gaia-icons.css" /> -->
 
@@ -134,7 +135,8 @@
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="show-event" class="fullscreen-view" id="event-view" role="region"></section>
 <section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
-<section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region"></section>
+<section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region"
+  nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="event-detail" class="fullscreen-view theme-calendar" id="event-detail-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="setup-calendar" class="fullscreen-view theme-calendar" id="setup-calendar-view" role="region"
