CORE-2385: Event detail page UI adjusted. r=jianmin

--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -4,7 +4,7 @@
       <h1 id="event-detail-title" data-l10n-id="event-detail-header">Event Detail</h1>
     </h5-header>
 
-    <section class="content">
+    <div class="content">
       <ul>
         <li class="location" tabindex="0">
           <div>
@@ -52,7 +52,7 @@
           </div>
         </li>
       </ul>
-    </section>
+    </div>
     <h5-dialog id="event-detail-dialog"></h5-dialog>
   </template>
 </element>
