CORE-2208: add page calendar_to_display and related function. r=jianmin-zhou

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <link rel="import" href="/elements/modify_event.html">
 <link rel="import" href="/elements/oauth.html">
 <link rel="import" href="/elements/settings.html">
+<link rel="import" href="/elements/calendar_chooser.html">
 <link rel="import" href="/elements/show_event.html">
 <link rel="import" href="/elements/multi_day.html">
 <link rel="import" href="/elements/events_list.html">
@@ -141,6 +142,7 @@
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="setup-calendar" class="fullscreen-view theme-calendar" id="setup-calendar-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
+<section is="calendar-chooser" id="calendar-chooser-view" class="theme-calendar"></section>
 <section id="h5-option-menu-border">
   <h5-option-menu tabIndex="0"></h5-option-menu>
 </section>
