CORE-2609: To stop 'enter' key event after inputting account info. r=jianmin

--- a/elements/modify_account.html
+++ b/elements/modify_account.html
@@ -14,7 +14,7 @@
       </div>
     </section>
 
-    <form class="modify-account-form" onsubmit="false">
+    <form class="modify-account-form">
       <fieldset>
         <ol role="presentation">
           <li class="user" id="users" role="presentation" tabindex="0" nav-scope>
