CORE-2619: setup_calendar.css file name and contents adjusted as style required. r=jianmin

--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -1,4 +1,4 @@
-<element name="setup-calendar" extends="section" class="setup-calendar-section">
+<element name="setup-calendar" extends="section">
   <template>
     <h5-header id="setup-calendar-header">
       <h1 data-l10n-id="setup-calendar-header">Setup Calendar</h1>
