CORE-2542: implement the function of rename and delete offline calendar. r=jianmin-zhou

--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -33,9 +33,9 @@
       </section>
     </div>
 
-    <section class="h5-dialog-container" nav-scope nav-ignore>
-      <h5-dialog></h5-dialog>
-    </section>
+    <div class="h5-dialog-container" nav-scope nav-ignore>
+      <h5-dialog tabindex="0"></h5-dialog>
+    </div>
 
   </template>
 </element>
