--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 <script defer src="/js/softkey/element_softkeys_map_helper.js"></script>
 <script defer src="/js/softkey/softkey_handler_helper.js"></script>
 
+<!-- these libs should be managed by volo -->
+<script defer src="/js/ext/date.js"></script>
+<script defer src="/js/ext/jstz-1.0.4.min.js"></script>
+
 <!-- The following scripts are lazy loaded but left here to ensure
      they get copied over from shared during the build -->
 <!-- <script defer src="/shared/accessibility_helper/accessibility_helper.js"></script> -->
