--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -1,11 +1,11 @@
 <element name="setup-calendar" extends="section">
   <template>
     <h5-header id="setup-calendar-header">
-      <h1 data-l10n-id="setup-calendar-header">Setup Calendar</h1>
+      <h1 data-l10n-id="setup-calendar-header">Setup Calendars</h1>
     </h5-header>
 
     <div>
-      <h5-separator data-l10n-id="calendar-local"></h5-separator>
+      <h5-separator data-l10n-id="preset-local"></h5-separator>
  
       <ul class="setup-ul local-calendars" role="presentation">
       </ul>
