CORE-2635: Css style in setup-up calendar changed to introduce scroll-function. r=jianmin

--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -4,7 +4,7 @@
       <h1 data-l10n-id="setup-calendar-header">Setup Calendars</h1>
     </h5-header>
 
-    <div>
+    <div class="setup-calendar-container">
       <h5-separator data-l10n-id="preset-local"></h5-separator>
  
       <ul class="setup-ul local-calendars" role="presentation">
