CORE-2628: Remove-online-account function invoked position changed, showNotice function added. r=Jianmin

--- a/elements/setup_calendar.html
+++ b/elements/setup_calendar.html
@@ -37,5 +37,9 @@
       <h5-dialog tabindex="0"></h5-dialog>
     </div>
 
+    <section role="status">
+      <p class="notices"></p>
+    </section>
+
   </template>
 </element>
