CORE-2385: Gaia-icon deleted, time-format changed, word replaced, page rearranged. r=jianmin

--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -8,7 +8,7 @@
       <ul>
         <li class="location" tabindex="0">
           <div>
-            <label class="event-detail-label" data-icon="location" aria-hidden="true"></label>
+            <label class="event-detail-label" data-icon="geolocation" aria-hidden="true"></label>
             <div class="event-detail-location-div">
               <span id="event-detail-location" class="p-pri content">
               </span>
@@ -17,7 +17,7 @@
         </li>
         <li class="duration-time" tabindex="0">
           <div>
-            <label class="event-detail-label" data-icon="time" aria-hidden="true"></label>
+            <label class="event-detail-label" data-icon="calendar" aria-hidden="true"></label>
             <div id="event-detail-duration-time" class="event-detail-time-div p-sec">
             </div>
           </div>
@@ -45,7 +45,7 @@
         </li>
         <li class="description" tabindex="0">
           <div class="event-detail-description-div-top">
-            <span class="p-sec" data-l10n-id="description">Description</span>
+            <span class="p-sec" data-l10n-id="note">Description</span>
           </div>
           <div class="event-detail-description-div-bot">
             <span class="p-pri content" id="event-detail-description"></span>
