CORE-2206: Events displayed in monthly-view adjusted. r=jianmin

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
   -->
   <section id="month-day-agenda" role="tabpanel">
     <div id="event-list-date"></div>
-    <div id="empty-message" data-l10n-id="no-events" class="active"></div>
+    <div id="empty-message" class="active">
+      <span data-l10n-id="no-events"></span>
+    </div>
     <section id="event-list" class="day-events" role="listbox" aria-labelledby="event-list-date">
     </section>
   </section>
