CORE-2381: First element in event-list will be focused after option-menu closed. r=jianmin

--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -45,7 +45,7 @@
         </li>
         <li class="description" tabindex="0">
           <div class="event-detail-description-div-top">
-            <span class="p-sec" data-l10n-id="note">Description</span>
+            <span class="p-sec" data-l10n-id="note">Note</span>
           </div>
           <div class="event-detail-description-div-bot">
             <span class="p-pri content" id="event-detail-description"></span>
