CORE-2644:add invitation from and invitees in online event. r=jianmin

--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -35,6 +35,22 @@
             </div>
           </div>
         </li>
+        <li class="detail-invitation-from" tabindex="0">
+          <div class="event-detail-invitation-div-top">
+            <span class="p-sec" data-l10n-id="invitation-from">Invitation from</span>
+          </div>
+          <div class="event-detail-invitation-div-bot">
+            <span class="p-pri content" id="event-detail-invitation-from" data-l10n-id="none">None</span>
+          </div>
+        </li>
+        <li class="detail-invitees" tabindex="0">
+          <div class="event-detail-invitees-div-top">
+            <span class="p-sec" data-l10n-id="invitatees">Invitatees</span>
+          </div>
+          <div class="event-detail-invitees-div-bot">
+            <span class="p-pri content" id="event-detail-invitees" data-l10n-id="none">None</span>
+          </div>
+        </li>
         <li class="alarms" tabindex="0">
           <div class="event-detail-alarms-div-top">
             <span class="p-sec" data-l10n-id="alert">Alert</span>
