CORE-2266: Alarmlist function adjusted, input field placeholders removed. r=jianmin

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -19,14 +19,14 @@
         <li class="title component-container" tabindex="0" nav-scope>
           <h5-input-wrapper class="sk-modify-event-title">
             <label data-l10n-id="title">Title</label>
-            <input type="text" name="title" data-l10n-id="input-field"  x-inputmode="latin-prose" placeholder="Input field" dir="auto"/>
+            <input type="text" name="title" data-l10n-id="input-field"  x-inputmode="latin-prose" dir="auto"/>
           </h5-input-wrapper>
         </li>
 
         <li class="location component-container" tabindex="0" nav-scope>
           <h5-input-wrapper class="sk-modify-event-location">
             <label data-l10n-id="location">Location</label>
-            <input type="text" name="location"  data-l10n-id="input-field" x-inputmode="latin-prose" placeholder="Input field" dir="auto"/>
+            <input type="text" name="location"  data-l10n-id="input-field" x-inputmode="latin-prose" dir="auto"/>
           </h5-input-wrapper>
         </li>
 
@@ -113,7 +113,7 @@
         <li class="notes component-container sk-modify-event-note" tabindex="0" nav-scope>
           <h5-input-wrapper class="sk-modify-event-title">
             <label data-l10n-id="note">Note</label>
-            <div contentEditable name="description" placeholder="Note"></div>
+            <div contentEditable name="description"></div>
           </h5-input-wrapper>
         </li>
       </ul>
