CORE-2842: Add OptionMenuController to manage option-menu in monthly view. r=jianmin

--- a/elements/advanced_settings.html
+++ b/elements/advanced_settings.html
@@ -28,7 +28,7 @@
             <select id="setting-sync-frequency" name="syncFrequency">
               <option data-l10n-id="sync-frequency-15min" value="15">Every 15 minutes</option>
               <option data-l10n-id="sync-frequency-30min" value="30">Every 30 minutes<</option>
-              <option data-l10n-id="sync-frequency-manual" value="null">Manual</option>
+              <option data-l10n-id="sync-frequency-manual" value="0">Manual</option>
             </select>
           </a>
         </li>
