--- a/index.html
+++ b/index.html
@@ -149,9 +149,12 @@
 <section is="setup-calendar" class="fullscreen-view theme-calendar" id="setup-calendar-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="calendar-chooser" id="calendar-chooser-view" class="theme-calendar"></section>
-<section id="h5-option-menu-border">
-  <h5-option-menu tabIndex="0"></h5-option-menu>
-</section>
+
 <input id="date-picker" class="hidden-input" aria-hidden="true" type="date">
+
+<section id="calendar-option-menu-wrapper">
+  <h5-option-menu id="calendar-option-menu" tabIndex="0"></h5-option-menu>
+</section>
+
 </body>
 </html>
