CORE-2863: Add DialogController to manage dialogs and integrate it into event detail page. r=jianmin

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 <section id="calendar-option-menu-wrapper">
   <h5-option-menu id="calendar-option-menu" tabIndex="0"></h5-option-menu>
 </section>
+<section id="calendar-dialog-wrapper">
+  <h5-dialog id="calendar-dialog" tabIndex="0"></h5-dialog>
+</section>
 
 </body>
 </html>
