--- a/elements/events_list.html
+++ b/elements/events_list.html
@@ -1,14 +1,12 @@
 <element name="events-list" extends="section">
   <template>
     <h5-header id="events-list-header">
-      <h1 id="events-list-header-date" data-l10n-id="events-list-header" tabindex="0">Event List</h1>
+      <h1 id="events-list-header-date" data-l10n-id="events-list-header">Event List</h1>
     </h5-header>
 
     <div class="content" id="events-list-agenda" nav-scope nav-loop nav-ignore>
       <ul id="events-list" class="day-events" role="listbox" aria-labelledby="events-list-header-date">
       </ul>
     </div>
-
-    <h5-dialog id="events-list-dialog"></h5-dialog>
   </template>
 </element>
