CORE-2386: Prevent toggling back to non-all-day when saving a all-day-event and push a 'none' in event-detail. r=jianmin

--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -32,7 +32,7 @@
 
         <li class="allday">
           <label class="menu-item">
-            <h5-checkbox class="sk-modify-event-all-day" name="allday" check></h5-checkbox>
+            <h5-checkbox class="sk-modify-event-all-day" name="allday"></h5-checkbox>
             <label id="all-day-event-checkbox-label"  data-l10n-id="event-is-allday">All-day event</label>
           </label>
         </li>
