--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 
 <body role="application" class="loading theme-calendar">
 
+<section id="calendar-toast" role="status" aria-live="assertive" aria-atomic="true">
+  <p class="message"></p>
+</section>
 <section is="errors" id="errors" role="status" aria-live="assertive" aria-atomic="true"></section>
 <section is="settings" id="settings" role="region"></section>
 
