CORE-2931: Make date picker holding focus while it is showing. r=jianmin

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="calendar-chooser" id="calendar-chooser-view" class="theme-calendar"></section>
 
-<input id="date-picker" class="hidden-input" aria-hidden="true" type="date">
+<input id="month-view-date-picker" class="hidden-input" aria-hidden="true" type="date">
 
 <section id="calendar-option-menu-wrapper">
   <h5-option-menu id="calendar-option-menu" tabIndex="0"></h5-option-menu>
