CORE-2389: UI in event-detail page re-adjusted. r=jianmin

--- a/elements/event_detail.html
+++ b/elements/event_detail.html
@@ -7,11 +7,11 @@
     <div class="content">
       <ul>
         <li class="location" tabindex="0">
-          <div>
-            <label class="event-detail-label" data-icon="geolocation" aria-hidden="true"></label>
-            <div class="event-detail-location-div">
-              <span id="event-detail-location" class="p-pri content">
-              </span>
+          <div class="location-outer-container">
+            <div class="location-label-container">
+              <label class="event-detail-label" data-icon="geolocation" aria-hidden="true"></label>
+            </div>
+            <div class="event-detail-location-div p-pri content" id="event-detail-location">
             </div>
           </div>
         </li>
