CORE-2665: Add a new page for account detail. r=jianmin

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <link rel="import" href="/elements/events_list.html">
 <link rel="import" href="/elements/event_detail.html">
 <link rel="import" href="/elements/setup_calendar.html">
+<link rel="import" href="/elements/account_detail.html">
 
 </head>
 
@@ -150,6 +151,8 @@
 <section is="event-detail" class="fullscreen-view theme-calendar" id="event-detail-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="setup-calendar" class="fullscreen-view theme-calendar" id="setup-calendar-view" role="region"
+  nav-scope nav-loop nav-ignore tabIndex="0"></section>
+<section is="account-detail" class="fullscreen-view theme-calendar" id="account-detail-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="calendar-chooser" id="calendar-chooser-view" class="theme-calendar"></section>
 
