CORE-2212: set the style of defaultCalendar selector as UX defines. r=jianmin-zhou

--- a/elements/advanced_settings.html
+++ b/elements/advanced_settings.html
@@ -40,6 +40,7 @@
             <small data-l10n-id="default-calendar">default-calendar</small>
             <select id="setting-default" name="defaultCalendar">
             </select>
+            <span name="defaultCalendar-locale"></span>
           </a>
         </li>
       </ul>
