CORE-2212: set HOME as default calendar on first use. r=jianmin-zhou

--- a/elements/advanced_settings.html
+++ b/elements/advanced_settings.html
@@ -40,7 +40,7 @@
             <small data-l10n-id="default-calendar">default-calendar</small>
             <select id="setting-default" name="defaultCalendar">
             </select>
-            <span name="defaultCalendar-locale"></span>
+            <span name="defaultCalendar-locale" data-l10n-id="choose-default-calendar"></span>
           </a>
         </li>
       </ul>
